--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8" />
         <title>To Do -list</title>
 
-        <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="code/script.js"></script>
     </head>
     <body onload="thisDate();">
         <h1>TO DO -LIST</h1>
