--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <script type="text/javascript" src="code/script.js"></script>
     </head>
-    <body onload="thisDate();">
+    <body onload="thisDate(); getData();">
         <h1>TO DO -LIST</h1>
         <div id="formdiv">
             <p>Write in the box below to add to your To Do -list!</p>
